tokio_pub_sub_macros/tests/fail/missing_publisher.stderr
error: proc-macro derive panicked
 --> tests/fail/missing_publisher.rs:3:10
  |
3 | #[derive(DerivePublisher)]
  |          ^^^^^^^^^^^^^^^
  |
  = help: message: Struct must have at least one field that implements the Publisher trait or is marked with #[publisher]
